# korean-spacing

./: .env.example  .gitignore  .npmignore  README.md  package-lock.json  package.json  pyproject.toml  setup_env.sh  tsconfig.json
korean_spacing/: __init__.py  modeling.py
models/: korean_spacing.onnx
models/korean_spacing_char/: config.json
scripts/: convert_to_onnx.py  postprocess.py  train.py
src/: example.ts  index.ts
src/types/: node-shims.d.ts  onnxruntime-node.d.ts
